--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -278,7 +278,7 @@ permissions/write_user_dictionary=false
 
 [preset.3]
 
-name="Linux/X11"
+name="Linux"
 platform="Linux/X11"
 runnable=true
 custom_features=""
