--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         id: build
         uses: josephbmanley/build-godot-action@v1.4.1
         with:
-          name: example
+          name: FNF-Godot-Edition
           preset: ${{ matrix.platform }}
           debugMode: "false"
       - name: Upload Artifact
